--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,19 @@
-<h1>These are your lists</h1>
+<div class="card-category lg" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path 'opg5x3s9zsruucamprdd', height: 500, crop: :fill %>')">
+  <h1>My movie lists</h1>
+</div>
 
-<% @lists.each do |list| %>
-  <%= list.name %>
-  <%= link_to "Details", list_path(list)%>
-<% end %>
+<div class="cards mt-3 mb-3">
+  <% @lists.each do |list| %>
+    <%= link_to list_path(list), class:"text-decoration-none" do %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= cl_image_path list.photo.key, height: 300, crop: :fill %>')">
+        <%= list.name %>
+      </div>
+    <% end %>
+  <% end %>
+</div>
+
+
 
 <div>
-  <%= link_to "Create a new list", new_list_path %>
+  <%= link_to "Create a new list", new_list_path, class: 'btn btn-success' %>
 </div>
