--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,12 +1,13 @@
 <h2>Create a new list</h2>
 
-<%= simple_form_for(@list) do |l| %>
+<%= simple_form_for(@list) do |f| %>
   <div class="form-inputs">
-    <%= l.input :name %>
+    <%= f.input :photo, as: :file %>
+    <%= f.input :name %>
   </div>
 
   <div class="form-actions">
-    <%= l.button :submit %>
+    <%= f.button :submit %>
   </div>
 <% end %>
 
