--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,30 +1,24 @@
-<div id="<%= dom_id @list %>">
-  <p>
-    <strong>Name:</strong>
-    <%= @list.name %>
-  </p>
-
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('<%= cl_image_path @list.photo.key, height: 300, crop: :fill %>')">
+  <%= @list.name %>
 </div>
 
-<div>
-  <%= link_to "Back to lists", lists_path, class: 'btn btn-link' %> |
-  <%= link_to "Create a new list", new_list_path(@list), class: 'btn btn-link' %> |
+
+<div align="right" class="m-3">
+  <%= link_to "Back to lists", lists_path, class: 'btn btn-secondary' %>
+  <%= link_to "Add a new movie", new_list_bookmark_path(@list), class: 'btn btn-success' %>
 </div>
 
-<div class="mt-5">
+<div align="center" class="m-3">
   <h2>Movies</h2>
-
-  <% @list.bookmarks.each do |bookmark| %>
-    <div class="row">
-      <div class="col">
-        <%= bookmark.comment %>
-        <%= bookmark.movie.title %>
-        <%= bookmark.movie.overview %>
-        <%= bookmark.movie.rating %>
-        <img src="<%= bookmark.movie.poster_url%>" alt="movie image">
-      </div>
+  <div class="d-flex justify-content-between my-4">
+    <div class="card" style="width: 18rem;">
+      <% @list.bookmarks.each do |bookmark| %>
+        <img src="<%= bookmark.movie.poster_url%>" class="card-img-top" alt="movie image">
+        <div class="card-body">
+          <h5 class="card-title"><strong><%= bookmark.movie.title %></strong> • <%= bookmark.movie.rating %> <i class="fas fa-star star-yellow"></i></h5>
+          <p class="card-text"><%= bookmark.movie.overview %></p>
+          <p>"<%= bookmark.comment %>"</p>
+        </div>
+      <% end %>
     </div>
-    <hr>
-  <% end %>
-</div>
-<%= link_to "Add a new movie", new_list_bookmark_path(@list), class: 'btn btn-link' %> |
+  </div>
