--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,6 +2,10 @@
   <h1>My movie lists</h1>
 </div>
 
+<div align="right" class="mt-3">
+  <%= link_to "Create a new list", new_list_path, class: 'btn btn-success' %>
+</div>
+
 <div class="cards mt-3 mb-3">
   <% @lists.each do |list| %>
     <%= link_to list_path(list), class:"text-decoration-none" do %>
@@ -10,10 +14,4 @@
       </div>
     <% end %>
   <% end %>
-</div>
-
-
-
-<div>
-  <%= link_to "Create a new list", new_list_path, class: 'btn btn-success' %>
 </div>
